Migrate enhanced bookmark workflows to NeoForge