@@ -5,11 +5,14 @@ import com.mojang.blaze3d.systems.RenderSystem;
 import mezz.jei.api.gui.IRecipeLayoutDrawable;
 import mezz.jei.api.gui.inputs.IJeiInputHandler;
 import mezz.jei.api.gui.inputs.RecipeSlotUnderMouse;
-import mezz.jei.common.util.ErrorUtil;
 import mezz.jei.common.util.ImmutableRect2i;
+import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.gui.input.ClickableIngredientInternal;
 import mezz.jei.gui.input.IClickableIngredientInternal;
+import mezz.jei.gui.input.FocusedRecipe;
+import mezz.jei.gui.input.FocusedRecipeCandidate;
 import mezz.jei.gui.input.IUserInputHandler;
+import mezz.jei.gui.input.UserInput;
 import mezz.jei.gui.input.handlers.CombinedInputHandler;
 import mezz.jei.gui.input.handlers.NullInputHandler;
 import mezz.jei.gui.input.handlers.ProxyInputHandler;
@@ -18,20 +21,19 @@ import mezz.jei.gui.overlay.elements.IngredientElement;
 import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import net.minecraft.client.renderer.Rect2i;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.inventory.AbstractContainerMenu;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 public class RecipeGuiLayouts {
-	private static final Logger LOGGER = LogManager.getLogger();
-
-	private final List<IRecipeLayoutWithButtons<?>> recipeLayoutsWithButtons = new ArrayList<>();
+	private final List<RecipeLayoutWithButtons<?>> recipeLayoutsWithButtons = new ArrayList<>();
 	@Nullable
 	private IUserInputHandler cachedInputHandler;
 
@@ -43,8 +45,8 @@ public class RecipeGuiLayouts {
 		if (this.recipeLayoutsWithButtons.isEmpty()) {
 			return;
 		}
-		IRecipeLayoutWithButtons<?> firstLayout = this.recipeLayoutsWithButtons.getFirst();
-		ImmutableRect2i layoutAreaWithBorder = new ImmutableRect2i(firstLayout.getRecipeLayout().getRectWithBorder());
+		RecipeLayoutWithButtons<?> firstLayout = this.recipeLayoutsWithButtons.get(0);
+		ImmutableRect2i layoutAreaWithBorder = new ImmutableRect2i(firstLayout.recipeLayout().getRectWithBorder());
 		final int recipeXOffset = getRecipeXOffset(layoutAreaWithBorder, recipeLayoutsArea);
 
 		final int recipeHeight = layoutAreaWithBorder.getHeight();
@@ -54,10 +56,62 @@ public class RecipeGuiLayouts {
 
 		final int spacingY = recipeHeight + recipeSpacing;
 		int recipeYOffset = recipeLayoutsArea.getY() + recipeSpacing;
-		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			recipeLayoutWithButtons.updateBounds(recipeXOffset, recipeYOffset);
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
+			Rect2i rectWithBorder = recipeLayout.getRectWithBorder();
+			Rect2i rect = recipeLayout.getRect();
+			recipeLayout.setPosition(
+				recipeXOffset - rectWithBorder.getX() + rect.getX(),
+				recipeYOffset - rectWithBorder.getY() + rect.getY()
+			);
 			recipeYOffset += spacingY;
 		}
+
+		updateRecipeButtonPositions();
+	}
+
+	private void updateRecipeButtonPositions() {
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
+			Rect2i layoutArea = recipeLayout.getRect();
+			Rect2i transferButtonArea = offset(recipeLayout.getRecipeTransferButtonArea(), layoutArea);
+			Rect2i bookmarkButtonArea = offset(recipeLayout.getRecipeBookmarkButtonArea(), layoutArea);
+
+			{
+				RecipeTransferButton button = recipeLayoutWithButtons.transferButton();
+				button.updateBounds(transferButtonArea);
+			}
+			{
+				RecipeBookmarkButton button = recipeLayoutWithButtons.bookmarkButton();
+				button.updateBounds(bookmarkButtonArea);
+			}
+			{
+				RecipeFavoriteButton button = recipeLayoutWithButtons.favoriteButton();
+				button.updateBounds(calculateRecipeFavoriteButtonArea(transferButtonArea, bookmarkButtonArea));
+			}
+		}
+	}
+
+	public static Rect2i calculateRecipeFavoriteButtonArea(Rect2i transferButtonArea, Rect2i bookmarkButtonArea) {
+		int bookmarkToTransferGap = Math.max(
+			0,
+			transferButtonArea.getY() - (bookmarkButtonArea.getY() + bookmarkButtonArea.getHeight())
+		);
+		return new Rect2i(
+			bookmarkButtonArea.getX(),
+			bookmarkButtonArea.getY() - bookmarkButtonArea.getHeight() - bookmarkToTransferGap,
+			bookmarkButtonArea.getWidth(),
+			bookmarkButtonArea.getHeight()
+		);
+	}
+
+	private static Rect2i offset(Rect2i area, Rect2i offset) {
+		return new Rect2i(
+			area.getX() + offset.getX(),
+			area.getY() + offset.getY(),
+			area.getWidth(),
+			area.getHeight()
+		);
 	}
 
 	private int getRecipeXOffset(ImmutableRect2i layoutRect, ImmutableRect2i layoutsArea) {
@@ -66,7 +120,7 @@ public class RecipeGuiLayouts {
 		}
 
 		final int recipeWidth = layoutRect.getWidth();
-		final int recipeWidthWithButtons = recipeLayoutsWithButtons.getFirst().totalWidth();
+		final int recipeWidthWithButtons = recipeLayoutsWithButtons.get(0).totalWidth();
 		final int buttonSpace = recipeWidthWithButtons - recipeWidth;
 
 		final int availableArea = layoutsArea.getWidth();
@@ -83,7 +137,7 @@ public class RecipeGuiLayouts {
 		return new ProxyInputHandler(() -> {
 			if (cachedInputHandler == null) {
 				List<IUserInputHandler> handlers = this.recipeLayoutsWithButtons.stream()
-					.map(IRecipeLayoutWithButtons::createUserInputHandler)
+					.map(RecipeLayoutWithButtons::createUserInputHandler)
 					.toList();
 				cachedInputHandler = new CombinedInputHandler("RecipeGuiLayouts", handlers);
 			}
@@ -91,11 +145,14 @@ public class RecipeGuiLayouts {
 		});
 	}
 
-	public void tick() {
-		safeCallOnRecipeLayouts(IRecipeLayoutWithButtons::tick);
+	public void tick(@Nullable AbstractContainerMenu parentContainer) {
+		Player player = Minecraft.getInstance().player;
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : this.recipeLayoutsWithButtons) {
+			recipeLayoutWithButtons.tick(parentContainer, player);
+		}
 	}
 
-	public void setRecipeLayoutsWithButtons(List<IRecipeLayoutWithButtons<?>> recipeLayoutsWithButtons) {
+	public void setRecipeLayoutsWithButtons(List<RecipeLayoutWithButtons<?>> recipeLayoutsWithButtons) {
 		this.recipeLayoutsWithButtons.clear();
 		this.recipeLayoutsWithButtons.addAll(recipeLayoutsWithButtons);
 		this.cachedInputHandler = null;
@@ -103,11 +160,56 @@ public class RecipeGuiLayouts {
 
 	public Stream<IClickableIngredientInternal<?>> getIngredientUnderMouse(double mouseX, double mouseY) {
 		return this.recipeLayoutsWithButtons.stream()
-			.map(IRecipeLayoutWithButtons::getRecipeLayout)
+			.map(RecipeLayoutWithButtons::recipeLayout)
 			.map(recipeLayout -> recipeLayout.getSlotUnderMouse(mouseX, mouseY))
 			.flatMap(Optional::stream)
 			.map(RecipeGuiLayouts::getClickedIngredient)
 			.flatMap(Optional::stream);
+	}
+
+	public Optional<FocusedRecipeCandidate> getFocusedRecipeCandidateUnderMouse(double mouseX, double mouseY) {
+		return this.recipeLayoutsWithButtons.stream()
+			.map(RecipeLayoutWithButtons::recipeLayout)
+			.filter(recipeLayout -> recipeLayout.isMouseOver(mouseX, mouseY))
+			.filter(recipeLayout -> isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY))
+			.findFirst()
+			.flatMap(RecipeGuiLayouts::getFocusedRecipeCandidate);
+	}
+
+	public Optional<FocusedRecipeCandidate> getRecipeTooltipCandidateUnderMouse(double mouseX, double mouseY) {
+		return this.recipeLayoutsWithButtons.stream()
+			.map(RecipeLayoutWithButtons::recipeLayout)
+			.filter(recipeLayout -> recipeLayout.isMouseOver(mouseX, mouseY))
+			.filter(recipeLayout -> !isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY))
+			.filter(recipeLayout -> hasDisplayedSlotUnderMouse(recipeLayout, mouseX, mouseY))
+			.findFirst()
+			.flatMap(RecipeGuiLayouts::getFocusedRecipeCandidate);
+	}
+
+	private static boolean isOutputSlotUnderMouse(IRecipeLayoutDrawable<?> recipeLayout, double mouseX, double mouseY) {
+		return recipeLayout.getSlotUnderMouse(mouseX, mouseY)
+			.map(RecipeSlotUnderMouse::slot)
+			.map(slot -> slot.getRole() == RecipeIngredientRole.OUTPUT)
+			.orElse(false);
+	}
+
+	private static boolean hasDisplayedSlotUnderMouse(IRecipeLayoutDrawable<?> recipeLayout, double mouseX, double mouseY) {
+		return recipeLayout.getSlotUnderMouse(mouseX, mouseY)
+			.map(RecipeSlotUnderMouse::slot)
+			.flatMap(slot -> slot.getDisplayedIngredient())
+			.isPresent();
+	}
+
+	public boolean bookmarkRecipeUnderMouse(UserInput input, boolean preserveAmount) {
+		double mouseX = input.getMouseX();
+		double mouseY = input.getMouseY();
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
+			if (recipeLayout.isMouseOver(mouseX, mouseY) && isOutputSlotUnderMouse(recipeLayout, mouseX, mouseY)) {
+				return recipeLayoutWithButtons.bookmarkButton().addRecipeBookmarkGroup(input, preserveAmount);
+			}
+		}
+		return false;
 	}
 
 	private static Optional<IClickableIngredientInternal<?>> getClickedIngredient(RecipeSlotUnderMouse slotUnderMouse) {
@@ -118,9 +220,19 @@ public class RecipeGuiLayouts {
 			});
 	}
 
+	private static <R> Optional<FocusedRecipeCandidate> getFocusedRecipeCandidate(IRecipeLayoutDrawable<R> recipeLayout) {
+		R recipe = recipeLayout.getRecipe();
+		ResourceLocation recipeUid = recipeLayout.getRecipeCategory().getRegistryName(recipe);
+		if (recipeUid == null) {
+			return Optional.empty();
+		}
+		ResourceLocation recipeTypeUid = recipeLayout.getRecipeCategory().getRecipeType().getUid();
+		return Optional.of(FocusedRecipeCandidate.recipe(new FocusedRecipe(recipeTypeUid, recipeUid)));
+	}
+
 	public boolean mouseDragged(double mouseX, double mouseY, InputConstants.Key input, double dragX, double dragY) {
-		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
 			if (mouseDragged(recipeLayout, mouseX, mouseY, input, dragX, dragY)) {
 				return true;
 			}
@@ -137,8 +249,8 @@ public class RecipeGuiLayouts {
 	}
 
 	public void mouseMoved(double mouseX, double mouseY) {
-		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
 			if (recipeLayout.isMouseOver(mouseX, mouseY)) {
 				IJeiInputHandler inputHandler = recipeLayout.getInputHandler();
 				inputHandler.handleMouseMoved(mouseX, mouseY);
@@ -153,42 +265,39 @@ public class RecipeGuiLayouts {
 		DeltaTracker deltaTracker = minecraft.getTimer();
 		float partialTicks = deltaTracker.getGameTimeDeltaPartialTick(false);
 
-		safeCallOnRecipeLayouts(r -> r.draw(guiGraphics, mouseX, mouseY, partialTicks));
-
-		for (IRecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.recipeLayout();
 			if (recipeLayout.isMouseOver(mouseX, mouseY)) {
 				hoveredLayout = recipeLayout;
-				break;
 			}
+			recipeLayout.drawRecipe(guiGraphics, mouseX, mouseY);
+
+			RecipeTransferButton transferButton = recipeLayoutWithButtons.transferButton();
+			transferButton.draw(guiGraphics, mouseX, mouseY, partialTicks);
+
+			RecipeFavoriteButton favoriteButton = recipeLayoutWithButtons.favoriteButton();
+			favoriteButton.draw(guiGraphics, mouseX, mouseY, partialTicks);
+
+			RecipeBookmarkButton bookmarkButton = recipeLayoutWithButtons.bookmarkButton();
+			bookmarkButton.draw(guiGraphics, mouseX, mouseY, partialTicks);
 		}
 		RenderSystem.disableBlend();
 		return Optional.ofNullable(hoveredLayout);
 	}
 
-	private void safeCallOnRecipeLayouts(Consumer<IRecipeLayoutWithButtons<?>> consumer) {
-		for (int i = 0; i < recipeLayoutsWithButtons.size(); i++) {
-			IRecipeLayoutWithButtons<?> recipeLayoutWithButtons = recipeLayoutsWithButtons.get(i);
-			IRecipeLayoutDrawable<?> recipeLayout = recipeLayoutWithButtons.getRecipeLayout();
-			try {
-				consumer.accept(recipeLayoutWithButtons);
-			} catch (RuntimeException e) {
-				String recipeInfo = ErrorUtil.getRecipeInfo(recipeLayout);
-				LOGGER.error("Recipe crashed:\n{}", recipeInfo, e);
-				recipeLayoutsWithButtons.set(i, new RecipeLayoutWithButtonsErrored<>(recipeLayout));
-			}
-		}
-	}
-
 	public void drawTooltips(GuiGraphics guiGraphics, int mouseX, int mouseY) {
-		safeCallOnRecipeLayouts(r -> r.drawTooltips(guiGraphics, mouseX, mouseY));
+		for (RecipeLayoutWithButtons<?> recipeLayoutWithButtons : recipeLayoutsWithButtons) {
+			recipeLayoutWithButtons.transferButton().drawTooltips(guiGraphics, mouseX, mouseY);
+			recipeLayoutWithButtons.favoriteButton().drawTooltips(guiGraphics, mouseX, mouseY);
+			recipeLayoutWithButtons.bookmarkButton().drawTooltips(guiGraphics, mouseX, mouseY);
+		}
 	}
 
 	public int getWidth() {
 		if (recipeLayoutsWithButtons.isEmpty()) {
 			return 0;
 		}
-		IRecipeLayoutWithButtons<?> first = this.recipeLayoutsWithButtons.getFirst();
+		RecipeLayoutWithButtons<?> first = this.recipeLayoutsWithButtons.get(0);
 		return first.totalWidth();
 	}
 }
